@@ -1,4 +1,5 @@
 4.7.3:
+  * "private" is a keyword in C++. (Duncan Grisby)
 
 4.7.2:
   * Solved a race condition in Replication Manager testcode.
